Add sandbox extension requirement for registering service https://bugs.webkit.org/show_bug.cgi?id=287957 rdar://144787086
Reviewed by Sihui Liu.

The sandbox extension needs to be granted for registering this service.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:

Canonical link: https://commits.webkit.org/290877@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in
@@ -113,7 +113,9 @@
 
 (define-once (accessibility-support)
     (allow mach-register
-        (local-name "com.apple.iphone.axserver"))
+        (require-all
+            (extension "com.apple.webkit.mach-bootstrap")
+            (local-name "com.apple.iphone.axserver")))
     (mobile-preferences-read "com.apple.Accessibility")
     
     ;; <rdar://problem/10809394>
