Address safer CPP failures in DocumentLoader.cpp https://bugs.webkit.org/show_bug.cgi?id=288244
Reviewed by Geoffrey Garen.

* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::mainResourceData const):
(WebCore::DocumentLoader::stopLoading):
(WebCore::DocumentLoader::notifyFinished):
(WebCore::DocumentLoader::finishedLoading):
(WebCore::DocumentLoader::handleSubstituteDataLoadNow):
(WebCore::DocumentLoader::matchRegistration):
(WebCore::DocumentLoader::redirectReceived):
(WebCore::DocumentLoader::willSendRequest):
(WebCore::DocumentLoader::doCrossOriginOpenerHandlingOfResponse):
(WebCore::DocumentLoader::tryLoadingSubstituteData):
(WebCore::DocumentLoader::tryLoadingRedirectRequestFromApplicationCache):
(WebCore::DocumentLoader::stopLoadingAfterXFrameOptionsOrContentSecurityPolicyDenied):
(WebCore::DocumentLoader::responseReceived):
(WebCore::DocumentLoader::continueAfterContentPolicy):
(WebCore::DocumentLoader::commitLoad):
(WebCore::DocumentLoader::commitData):
(WebCore::DocumentLoader::setupForReplace):
(WebCore::DocumentLoader::checkLoadComplete):
(WebCore::DocumentLoader::detachFromFrame):
(WebCore::DocumentLoader::loadApplicationManifest):
(WebCore::DocumentLoader::isLoadingInAPISense const):
(WebCore::DocumentLoader::maybeCreateArchive):
(WebCore::DocumentLoader::setArchive):
(WebCore::DocumentLoader::archiveResourceForURL const):
(WebCore::DocumentLoader::subresource const):
(WebCore::DocumentLoader::scheduleArchiveLoad):
(WebCore::DocumentLoader::documentURL const):
(WebCore::DocumentLoader::setDefersLoading):
(WebCore::DocumentLoader::isMultipartReplacingLoad const):
(WebCore::DocumentLoader::startLoadingMainResource):
(WebCore::DocumentLoader::unregisterReservedServiceWorkerClient):
(WebCore::DocumentLoader::loadMainResource):
(WebCore::DocumentLoader::cancelMainResourceLoad):
(WebCore::DocumentLoader::startIconLoading):
(WebCore::DocumentLoader::shouldOpenExternalURLsPolicyToPropagate const):
(WebCore::DocumentLoader::addConsoleMessage)

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -5341,7 +5341,7 @@ struct WebCore::PolicyContainer {
 [Nested] enum class WebCore::SubstituteData::SessionHistoryVisibility : bool
 
 class WebCore::SubstituteData {
-    RefPtr<WebCore::FragmentedSharedBuffer> content();
+    RefPtr<WebCore::FragmentedSharedBuffer> protectedContent();
     URL failingURL();
     WebCore::ResourceResponse response();
     WebCore::SubstituteData::SessionHistoryVisibility shouldRevealToSessionHistory();
