Remove sandbox extension to Web Inspector daemon in the WebContent process rdar://135814632 https://bugs.webkit.org/show_bug.cgi?id=287347
Reviewed by Chris Dumez.

When access to the Web Inspector daemon is blocked in the WebContent process sandbox, we cannot create
the Service Worker inspection target in the WebContent process anymore. Instead, we create the inspection
target in the UI process. We also create a bidirectional communication channel over IPC between the
Service worker in the WebContent process and the new inspection target in the UI process. The new
inspection target in the UI process will then communicate with the Web Inspector daemon and enable
inspection of the Service Worker. Messages from the Service Worker to the UI process are sent via
WebProcessProxy, and messages from the Inspector to the Service Worker are being sent through
WebSWContextManagerConnection.

* Source/JavaScriptCore/inspector/remote/RemoteInspector.h:
* Source/WebCore/workers/service/context/ServiceWorkerInspectorProxy.h:
* Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::createServiceWorkerDebuggable):
(WebKit::WebProcessProxy::deleteServiceWorkerDebuggable):
(WebKit::WebProcessProxy::sendMessageToInspector):
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.messages.in:
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Source/WebKit/WebProcess/Inspector/ServiceWorkerDebuggableFrontendChannel.cpp: Added.
(WebKit::ServiceWorkerDebuggableFrontendChannel::create):
(WebKit::ServiceWorkerDebuggableFrontendChannel::ServiceWorkerDebuggableFrontendChannel):
(WebKit::ServiceWorkerDebuggableFrontendChannel::sendMessageToFrontend):
* Source/WebKit/WebProcess/Inspector/ServiceWorkerDebuggableFrontendChannel.h: Added..
* Source/WebKit/WebProcess/Inspector/ServiceWorkerDebuggableProxy.cpp: Added.
(WebKit::ServiceWorkerDebuggableProxy::create):
(WebKit::ServiceWorkerDebuggableProxy::ServiceWorkerDebuggableProxy):
(WebKit

--- a/Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.messages.in
+++ b/Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.messages.in
@@ -58,4 +58,10 @@ messages -> WebSWContextManagerConnection {
     FireUpdateFoundEvent(WebCore::ServiceWorkerRegistrationIdentifier identifier)
     SetRegistrationLastUpdateTime(WebCore::ServiceWorkerRegistrationIdentifier identifier, WallTime lastUpdateTime)
     SetRegistrationUpdateViaCache(WebCore::ServiceWorkerRegistrationIdentifier identifier, enum:uint8_t WebCore::ServiceWorkerUpdateViaCache updateViaCache)
+
+#if ENABLE(REMOTE_INSPECTOR) && PLATFORM(COCOA)
+    ConnectToInspector(WebCore::ServiceWorkerIdentifier serviceWorkerIdentifier)
+    DisconnectFromInspector(WebCore::ServiceWorkerIdentifier serviceWorkerIdentifier)
+    DispatchMessageFromInspector(WebCore::ServiceWorkerIdentifier serviceWorkerIdentifier, String message)
+#endif
 }
