--- a/Tools/MiniBrowser/MiniBrowser.entitlements
+++ b/Tools/MiniBrowser/MiniBrowser.entitlements
@@ -23,6 +23,7 @@
 		<string>com.apple.PIPAgent</string>
 		<string>com.apple.Safari.SafeBrowsing.Service</string>
 		<string>com.apple.WebKit.NetworkingDaemon</string>
+		<string>com.apple.webinspector</string>
 	</array>
 	<key>com.apple.security.temporary-exception.sbpl</key>
 	<array>
