Abort FileSystem writables in case of network process crash or storage clearing https://bugs.webkit.org/show_bug.cgi?id=287235 rdar://problem/144380830
Reviewed by Sihui Liu.

When a writable is open, it may be aborted in case the network process crashes or in case the underlying file is deleted.
To support this mechanism, we allow networking process to invalidate a writable like done for sync access handles.
Similarly, if a network process crashes, we add the same mechanism for writables as for sync access handles.

When a writable (aka FileSystemWritableFileStream) gets crated, we register it in its FileSystemStorageConnection.
When a writable is closed, we unregister it as well.

When a FileSystemStorageConnection is instructed to error a writable, it will call the new WritableStream errorIfPossible method.

Covered by added test.

* LayoutTests/storage/filesystemaccess/writable-file-stream-abort-expected.txt: Added.
* LayoutTests/storage/filesystemaccess/writable-file-stream-abort.html: Added.
* Source/WebCore/Modules/filesystemaccess/FileSystemFileHandle.cpp:
(WebCore::FileSystemFileHandle::createWritable):
(WebCore::FileSystemFileHandle::closeWritable):
* Source/WebCore/Modules/filesystemaccess/FileSystemStorageConnection.cpp: Added.
(WebCore::FileSystemStorageConnection::errorFileSystemWritable):
(WebCore::FileSystemStorageConnection::registerFileSystemWritable):
(WebCore::FileSystemStorageConnection::unregisterFileSystemWritable):
* Source/WebCore/Modules/filesystemaccess/FileSystemStorageConnection.h:
* Source/WebCore/Modules/filesystemaccess/WorkerFileSystemStorageConnection.cpp:
(WebCore::WorkerFileSystemStorageConnection::createWritable):
* Source/WebCore/Modules/filesystemaccess/WorkerFileSystemStorageConnection.h:
* Source/WebCore/Modules/streams/WritableStream.cpp:
(WebCore::WritableStream::errorIfPossible):
* Source/WebCore/Modules/streams/WritableStream.h:
* Source/WebCore/Modules/streams/WritableStreamInternals.js:
(writableStreamErrorIfPossible):


--- a/Source/WebKit/WebProcess/WebCoreSupport/WebFileSystemStorageConnection.messages.in
+++ b/Source/WebKit/WebProcess/WebCoreSupport/WebFileSystemStorageConnection.messages.in
@@ -26,4 +26,5 @@
 ]
 messages -> WebFileSystemStorageConnection {
     InvalidateAccessHandle(WebCore::FileSystemSyncAccessHandleIdentifier identifier)
+    InvalidateWritable(WebCore::FileSystemWritableFileStreamIdentifier identifier)
 }
