[ANGLE] Workaround ASan false-positive stack-use-after-scope in Xcode 16.3 <https://bugs.webkit.org/show_bug.cgi?id=288308> <rdar://144259986>
Reviewed by John Wilander and Kimmo Kinnunen.

* Configurations/Sanitizers.xcconfig:
(WK_ADDRESS_SANITIZER_OTHER_CFLAGS_YES):
(WK_NEEDS_RDAR_145268301_ASAN_STACK_USE_AFTER_SCOPE_WORKAROUND): Add.
(WK_WORKAROUND_RDAR_145268301_ASAN_STACK_USE_AFTER_SCOPE): Add.
(WK_WORKAROUND_RDAR_145268301_ASAN_STACK_USE_AFTER_SCOPE_YES): Add.
- Include a command-line switch to define a macro if the workaround is
  needed.
* Configurations/WebKitTargetConditionals.xcconfig:
(WK_XCODE_BEFORE_16_3): Add.
(WK_XCODE_BEFORE_16_3_XCODE_BEFORE_16): Add.
(WK_XCODE_BEFORE_16_3_XCODE_SINCE_16): Add.
(WK_XCODE_BEFORE_16_3_1600): Add.
(WK_XCODE_BEFORE_16_3_1610): Add.
(WK_XCODE_BEFORE_16_3_1620): Add.
(WK_XCODE_16_3): Add.
(WK_XCODE_16_3_): Add.
(WK_XCODE_16_3_YES): Add.
- Add version checking variables for Xcode 16.3.
* Source/ThirdParty/ANGLE/src/compiler/translator/InfoSink.h:
(sh::fractionalPart):
- Disable ASan if the workaround is needed.

Canonical link: https://commits.webkit.org/290943@main

--- a/Configurations/WebKitTargetConditionals.xcconfig
+++ b/Configurations/WebKitTargetConditionals.xcconfig
@@ -1,4 +1,4 @@
-// Copyright (C) 2018-2024 Apple Inc. All rights reserved.
+// Copyright (C) 2018-2025 Apple Inc. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -380,3 +380,14 @@ WK_XCODE_BEFORE_16_1500 = YES;
 WK_XCODE_16 = $(WK_XCODE_16_$(WK_XCODE_BEFORE_16));
 WK_XCODE_16_ = _XCODE_SINCE_16;
 WK_XCODE_16_YES = _XCODE_BEFORE_16;
+
+WK_XCODE_BEFORE_16_3 = $(WK_XCODE_BEFORE_16_3$(WK_XCODE_16));
+WK_XCODE_BEFORE_16_3_XCODE_BEFORE_16 = YES;
+WK_XCODE_BEFORE_16_3_XCODE_SINCE_16 = $(WK_XCODE_BEFORE_16_3_$(XCODE_VERSION_MINOR));
+WK_XCODE_BEFORE_16_3_1600 = YES;
+WK_XCODE_BEFORE_16_3_1610 = YES;
+WK_XCODE_BEFORE_16_3_1620 = YES;
+
+WK_XCODE_16_3 = $(WK_XCODE_16_3_$(WK_XCODE_BEFORE_16_3));
+WK_XCODE_16_3_ = _XCODE_SINCE_16_3;
+WK_XCODE_16_3_YES = _XCODE_BEFORE_16_3;
