[JSC] Enable sm tests in test262 https://bugs.webkit.org/show_bug.cgi?id=288361
Reviewed by Yusuke Suzuki.

This patch enables sm(SpiderMonkey) tests in test262.

In the current JSC, 69 out of 1430 sm tests are failing,
but the rest are passing, so it’s worth testing.

* JSTests/test262/config.yaml:
* JSTests/test262/expectations.yaml:

Canonical link: https://commits.webkit.org/290946@main

--- a/JSTests/test262/config.yaml
+++ b/JSTests/test262/config.yaml
@@ -45,7 +45,7 @@ skip:
     - test/staging/Intl402
     - test/staging/JSON
     - test/staging/Temporal
-    - test/staging/sm
+    - test/staging/sm/Temporal
   files:
     # https://github.com/claudepache/es-legacy-function-reflection
     - test/built-ins/ThrowTypeError/unique-per-realm-function-proto.js
