--- a/Source/WebCore/css/CSSValueKeywords.in
+++ b/Source/WebCore/css/CSSValueKeywords.in
@@ -949,6 +949,15 @@ padding-box
 -webkit-text
 
 //
+// Corner-shape
+//
+// round
+scoop
+// bevel
+notch
+straight
+
+//
 // CSS_PROP_MASK_CLIP
 //
 // Same as background-clip above, except with some extra values.
