Use the org.webkit prefix for TestWebKitAPI.app's bundle identifier https://bugs.webkit.org/show_bug.cgi?id=288245
Reviewed by Richard Robinson and Elliott Williams.

Using a bundle identifier prefix of com.apple. is incompatible with apps built against a Public
SDK. For consistency with WebKitTestRunner.app, MiniBrowser.app, etc., changed TestWebKitAPI.app's
bundle identifier to org.webkit.TestWebKitAPI.

* Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig:

Canonical link: https://commits.webkit.org/290963@main

--- a/Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig
+++ b/Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig
@@ -24,7 +24,7 @@
 #include "TestWebKitAPIBase.xcconfig"
 
 PRODUCT_NAME = TestWebKitAPI;
-PRODUCT_BUNDLE_IDENTIFIER = com.apple.WebKit.TestWebKitAPIApp;
+PRODUCT_BUNDLE_IDENTIFIER = org.webkit.$(PRODUCT_NAME:rfc1034identifier);
 
 EXCLUDED_SOURCE_FILE_NAMES[sdk=macosx*] = ios/app/*;
 EXCLUDED_SOURCE_FILE_NAMES[sdk=embedded*] = mac/app/*;
