[Site Isolation] Can’t go back after navigating a same-site iframe into a new process https://bugs.webkit.org/show_bug.cgi?id=288393 rdar://138924071
Reviewed by Alex Christensen.

The condition in WebPageProxy::continueNavigationInNewProcess was incorrect; it should be true only for
the first load of a child frame but could have been true when a same-site iframe was navigated
cross-site.

* LayoutTests/http/tests/site-isolation/history/navigate-same-site-iframe-into-new-process-and-go-back-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/history/navigate-same-site-iframe-into-new-process-and-go-back.html: Added.
* LayoutTests/http/tests/site-isolation/history/resources/go-back.html: Added.
* Source/WebKit/Shared/NavigationActionData.h:
* Source/WebKit/Shared/NavigationActionData.serialization.in:
* Source/WebKit/UIProcess/API/APINavigation.h:
(API::Navigation::isInitialFrameSrcLoad const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::continueNavigationInNewProcess):
* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::createWindow):
* Source/WebKit/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::navigationActionData const):
* Source/WebKit/WebProcess/WebCoreSupport/WebLocalFrameLoaderClient.cpp:
(WebKit::WebLocalFrameLoaderClient::didSameDocumentNavigationForFrameViaJS):
(WebKit::WebLocalFrameLoaderClient::dispatchDecidePolicyForNewWindowAction):

Canonical link: https://commits.webkit.org/290988@main

--- a/Source/WebKit/Shared/NavigationActionData.serialization.in
+++ b/Source/WebKit/Shared/NavigationActionData.serialization.in
@@ -38,6 +38,7 @@ struct WebKit::NavigationActionData {
     bool openedByDOMWithOpener;
     bool hasOpener;
     bool isPerformingHTTPFallback;
+    bool isInitialFrameSrcLoad;
     String openedMainFrameName;
     WebCore::SecurityOriginData requesterOrigin;
     WebCore::SecurityOriginData requesterTopOrigin;
