Try to fix the macCatalyst build https://bugs.webkit.org/show_bug.cgi?id=288428 rdar://145520449
Unreviewed build fix. Fixed the macCatalyst build after the introduction of TestWebKitAPI.app in
283902@main by excluding mac/app/main.mm on macCatalyst.

* Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig:

Canonical link: https://commits.webkit.org/290999@main

--- a/Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig
+++ b/Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig
@@ -26,7 +26,9 @@
 PRODUCT_NAME = TestWebKitAPI;
 PRODUCT_BUNDLE_IDENTIFIER = org.webkit.$(PRODUCT_NAME:rfc1034identifier);
 
-EXCLUDED_SOURCE_FILE_NAMES[sdk=macosx*] = ios/app/*;
+EXCLUDED_SOURCE_FILE_NAMES[sdk=macosx*] = $(EXCLUDED_SOURCE_FILE_NAMES_$(WK_PLATFORM_NAME))
+EXCLUDED_SOURCE_FILE_NAMES_maccatalyst = mac/app/*;
+EXCLUDED_SOURCE_FILE_NAMES_macosx = ios/app/*;
 EXCLUDED_SOURCE_FILE_NAMES[sdk=embedded*] = mac/app/*;
 
 GENERATE_INFOPLIST_FILE = YES;
