[iOS] Embed app extensions in TestWebKitAPI.app https://bugs.webkit.org/show_bug.cgi?id=288417 rdar://145514969
Reviewed by Elliott Williams.

So that the locally-built versions of GPUExtension.appex, NetworkingExtension.appex, and
WebContentExtension.appex are used at runtime when running TestWebKitAPI.app, embed them in the
app's bundle like we do in WebKitTestRunner.app.

To avoid duplicating the logic in Tools/WebKitTestRunner/Scripts/install-extensions-rule.sh, moved
the file to Tools/TestRunnerShared/Scripts. Modified the script to be portable to both test runners.

* Tools/TestRunnerShared/Scripts/install-extensions-rule.sh:
Renamed from Tools/WebKitTestRunner/Scripts/install-extensions-rule.sh.

* Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig:
Enabled APPLY_RULES_IN_COPY_FILES.

* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
Added a Copy Files build rule to embed app extensions; added a custom build rule to invoke
install-extensions-rule.sh.

* Tools/WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj:
Updated the path to install-extensions-rule.sh.

Canonical link: https://commits.webkit.org/291094@main

--- a/Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig
+++ b/Tools/TestWebKitAPI/Configurations/TestWebKitAPIApp.xcconfig
@@ -48,3 +48,5 @@ CLANG_ENABLE_OBJC_ARC = YES;
 CLANG_ENABLE_OBJC_WEAK = YES;
 
 GTEST_LDFLAGS = -framework gtest;
+
+APPLY_RULES_IN_COPY_FILES = YES;
