Move files related to borders and box decorations into {css/style}/values/borders https://bugs.webkit.org/show_bug.cgi?id=288569
Reviewed by Simon Fraser.

CSS borders and box decorations (e.g. shadows) are being moved out of the
backgrounds spec (https://drafts.csswg.org/css-backgrounds/) and into a
new borders spec (https://drafts.csswg.org/css-borders/). This aligns the
naming of directories to match this.

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/css/values/borders/CSSBorderRadius.cpp: Renamed from Source/WebCore/css/values/backgrounds/CSSBorderRadius.cpp.
* Source/WebCore/css/values/borders/CSSBorderRadius.h: Renamed from Source/WebCore/css/values/backgrounds/CSSBorderRadius.h.
* Source/WebCore/css/values/borders/CSSBoxShadow.h: Renamed from Source/WebCore/css/values/backgrounds/CSSBoxShadow.h.
* Source/WebCore/css/values/borders/CSSBoxShadowProperty.h: Renamed from Source/WebCore/css/values/backgrounds/CSSBoxShadowProperty.h.
* Source/WebCore/style/values/borders/StyleBorderRadius.cpp: Renamed from Source/WebCore/style/values/backgrounds/StyleBorderRadius.cpp.
* Source/WebCore/style/values/borders/StyleBorderRadius.h: Renamed from Source/WebCore/style/values/backgrounds/StyleBorderRadius.h.
* Source/WebCore/style/values/borders/StyleBoxShadow.cpp: Renamed from Source/WebCore/style/values/backgrounds/StyleBoxShadow.cpp.
* Source/WebCore/style/values/borders/StyleBoxShadow.h: Renamed from Source/WebCore/style/values/backgrounds/StyleBoxShadow.h.

Canonical link: https://commits.webkit.org/291139@main

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -100,7 +100,7 @@ set(WebCore_PRIVATE_INCLUDE_DIRECTORIES
     "${WEBCORE_DIR}/css/typedom/numeric"
     "${WEBCORE_DIR}/css/typedom/transform"
     "${WEBCORE_DIR}/css/values"
-    "${WEBCORE_DIR}/css/values/backgrounds"
+    "${WEBCORE_DIR}/css/values/borders"
     "${WEBCORE_DIR}/css/values/color"
     "${WEBCORE_DIR}/css/values/color-adjust"
     "${WEBCORE_DIR}/css/values/easing"
@@ -194,7 +194,7 @@ set(WebCore_PRIVATE_INCLUDE_DIRECTORIES
     "${WEBCORE_DIR}/storage"
     "${WEBCORE_DIR}/style"
     "${WEBCORE_DIR}/style/values"
-    "${WEBCORE_DIR}/style/values/backgrounds"
+    "${WEBCORE_DIR}/style/values/borders"
     "${WEBCORE_DIR}/style/values/color"
     "${WEBCORE_DIR}/style/values/color-adjust"
     "${WEBCORE_DIR}/style/values/easing"
