[ResourceMonitor] Track network usage of ServiceWorker. https://bugs.webkit.org/show_bug.cgi?id=287506 rdar://144586530
Reviewed by Youenn Fablet.

We don't track network usage of ServiceWorker registered by iframe and also there's no direct connection
between ServiceWorker and iframe right now. To monitor network usage, send IPC message to report
network usage of ServiceWorker to all connected iframe document.

To make this happen:
1. Add new parameter, `workerIdentifier` in NetworkResourceLoadParameters.
2. Report network usage of the ServiceWorker from NetworkResourceLoader to connected ServiceWorker clients.
3. Tell ResourceMonitor to treate those usage as part of the resource usage of iframe.

* LayoutTests/http/tests/iframe-monitor/resources/--eligible--/iframe2.html:
* LayoutTests/http/tests/iframe-monitor/resources/--eligible--/service-worker-setup.js: Added.
(async waitForState):
* LayoutTests/http/tests/iframe-monitor/resources/--eligible--/service-worker.html: Added.
* LayoutTests/http/tests/iframe-monitor/resources/--eligible--/service-worker.js: Added.
(async e):
* LayoutTests/http/tests/iframe-monitor/resources/--eligible--/unregister-service-worker.html: Added.
* LayoutTests/http/tests/iframe-monitor/resources/--eligible--/using-1k.html: Added.
* LayoutTests/http/tests/iframe-monitor/resources/--eligible--/using-6k.html: Added.
* LayoutTests/http/tests/iframe-monitor/shared-worker.html: Removed.
* LayoutTests/http/tests/iframe-monitor/workers/service-worker-expected.txt: Added.
* LayoutTests/http/tests/iframe-monitor/workers/service-worker-not-count-twice-expected.txt: Added.
* LayoutTests/http/tests/iframe-monitor/workers/service-worker-not-count-twice.html: Added.
* LayoutTests/http/tests/iframe-monitor/workers/service-worker.html: Added.
* LayoutTests/http/tests/iframe-monitor/workers/shared-worker-expected.txt: Renamed from LayoutTests/http/tests/iframe-monitor/shared-worker-expected.txt.
* LayoutTests/http/tests/iframe-monitor/workers/shared-work

--- a/Source/WebKit/WebProcess/Storage/WebSWClientConnection.messages.in
+++ b/Source/WebKit/WebProcess/Storage/WebSWClientConnection.messages.in
@@ -49,4 +49,8 @@ messages -> WebSWClientConnection {
 
     NotifyRecordResponseBodyChunk(WebKit::RetrieveRecordResponseBodyCallbackIdentifier identifier, IPC::SharedBufferReference data);
     NotifyRecordResponseBodyEnd(WebKit::RetrieveRecordResponseBodyCallbackIdentifier identifier, WebCore::ResourceError error);
+
+#if ENABLE(CONTENT_EXTENSIONS)
+    ReportNetworkUsageToWorkerClient(WebCore::ScriptExecutionContextIdentifier destinationContextIdentifier, size_t bytesTransferredOverNetworkDelta);
+#endif
 }
