Add pointer event regions to EventRegion https://bugs.webkit.org/show_bug.cgi?id=288616 rdar://145671088
Reviewed by Simon Fraser.

Add pointer event and synthetic mouse regions to Event region and populate it per layer based
on the RenderStyle value of eventListenerRegionTypes. Refactor EventRegion to hold a
EventTrackingRegions for touch event listeners.

* Source/WTF/wtf/PlatformEnableCocoa.h:
* Source/WebCore/page/scrolling/ScrollingTree.h:
* Source/WebCore/platform/EventTrackingRegions.cpp:
(WebCore::EventTrackingRegions::uniteEventListeners):
(WebCore::operator<<):
* Source/WebCore/platform/EventTrackingRegions.h:
* Source/WebCore/rendering/EventRegion.cpp:
(WebCore::EventRegion::EventRegion):
(WebCore::containsTouchEventType):
(WebCore::EventRegion::uniteEventListeners):
(WebCore::EventRegion::eventListenerRegionTypesForPoint const): Deleted.
(WebCore::EventRegion::eventListenerRegionForType const): Deleted.
(WebCore::EventRegion::containsEditableElementsInRect const): Deleted.
(WebCore::EventRegion::appendInteractionRegions): Deleted.
(WebCore::EventRegion::clearInteractionRegions): Deleted.
(WebCore::EventRegion::dump const): Deleted.
(WebCore::operator<<): Deleted.
* Source/WebCore/rendering/EventRegion.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::patternForEventListenerRegionType):
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleConstants.cpp:
(WebCore::operator<<):
* Source/WebCore/rendering/style/RenderStyleConstants.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::computeEventListenerRegionTypes):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeViews.h:

Canonical link: https://commits.webkit.org/291377@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -6126,16 +6126,6 @@ struct WebCore::VideoFrameTimeMetadata {
     WebCore::FontSmoothingMode smoothingMode;
 };
 
-#if ENABLE(TOUCH_EVENT_REGIONS)
-header: <WebCore/EventRegion.h>
-[CustomHeader] struct WebCore::TouchEventListenerRegion {
-    WebCore::Region start;
-    WebCore::Region end;
-    WebCore::Region move;
-    WebCore::Region cancel;
-};
-#endif
-
 class WebCore::EventRegion {
     WebCore::Region m_region;
 #if ENABLE(TOUCH_ACTION_REGIONS)
@@ -6146,8 +6136,7 @@ class WebCore::EventRegion {
     WebCore::Region m_nonPassiveWheelEventListenerRegion;
 #endif
 #if ENABLE(TOUCH_EVENT_REGIONS)
-    WebCore::TouchEventListenerRegion m_touchEventListenerRegion;
-    WebCore::TouchEventListenerRegion m_nonPassiveTouchEventListenerRegion;
+    WebCore::EventTrackingRegions m_touchEventListenerRegion;
 #endif
 #if ENABLE(EDITABLE_REGION)
     std::optional<WebCore::Region> m_editableRegion;
