Annotate NetworkStorageManager endpoints with FileSystemAccessEnabled https://bugs.webkit.org/show_bug.cgi?id=288765 rdar://145789675
Reviewed by Ryosuke Niwa.

Annotate NetworkStorageManager endpoints with FileSystemAccessEnabled

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.messages.in:

Canonical link: https://commits.webkit.org/291403@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -3031,6 +3031,7 @@ FileSystemAccessEnabled:
       "PLATFORM(COCOA)" : true
       default: false
   disableInLockdownMode: true
+  sharedPreferenceForWebProcess: true
 
 FileSystemWritableStreamEnabled:
   type: bool
