Annotate NetworkStorageManager endpoints using CacheAPIEnabled https://bugs.webkit.org/show_bug.cgi?id=288753 rdar://145786092
Reviewed by Ryosuke Niwa.

Annotate NetworkStorageManager endpoints using CacheAPIEnabled

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.messages.in:

Canonical link: https://commits.webkit.org/291406@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -1782,6 +1782,7 @@ CacheAPIEnabled:
     WebCore:
       default: false
   disableInLockdownMode: true
+  sharedPreferenceForWebProcess: true
 
 CanvasColorSpaceEnabled:
   type: bool
