--- a/Source/WebKit/NetworkProcess/storage/NetworkStorageManager.messages.in
+++ b/Source/WebKit/NetworkProcess/storage/NetworkStorageManager.messages.in
@@ -87,18 +87,18 @@
     IterateCursor(WebCore::IDBRequestData requestData, struct WebCore::IDBIterateCursorData data)
     GetAllDatabaseNamesAndVersions(WebCore::IDBResourceIdentifier requestIdentifier, struct WebCore::ClientOrigin origin)
 
-    CacheStorageOpenCache(struct WebCore::ClientOrigin origin, String cacheName) -> (WebCore::DOMCacheEngine::CacheIdentifierOrError result)
-    CacheStorageRemoveCache(WebCore::DOMCacheIdentifier cacheIdentifier) -> (WebCore::DOMCacheEngine::RemoveCacheIdentifierOrError result)
-    CacheStorageAllCaches(struct WebCore::ClientOrigin origin, uint64_t updateCounter) -> (WebCore::DOMCacheEngine::CacheInfosOrError result)
-    CacheStorageReference(WebCore::DOMCacheIdentifier cacheIdentifier)
-    CacheStorageDereference(WebCore::DOMCacheIdentifier cacheIdentifier)
-    LockCacheStorage(struct WebCore::ClientOrigin origin)
-    UnlockCacheStorage(struct WebCore::ClientOrigin origin)
-    CacheStorageRetrieveRecords(WebCore::DOMCacheIdentifier cacheIdentifier, struct WebCore::RetrieveRecordsOptions options) -> (WebCore::DOMCacheEngine::CrossThreadRecordsOrError result)
-    CacheStorageRemoveRecords(WebCore::DOMCacheIdentifier cacheIdentifier, WebCore::ResourceRequest request, struct WebCore::CacheQueryOptions options) -> (WebCore::DOMCacheEngine::RecordIdentifiersOrError result)
-    CacheStoragePutRecords(WebCore::DOMCacheIdentifier cacheIdentifier, Vector<WebCore::DOMCacheEngine::CrossThreadRecord> records) -> (WebCore::DOMCacheEngine::RecordIdentifiersOrError result)
-    CacheStorageClearMemoryRepresentation(struct WebCore::ClientOrigin origin) -> ()
-    CacheStorageRepresentation() -> (String representation)
+    [EnabledBy=CacheAPIEnabled] CacheStorageOpenCache(struct WebCore::ClientOrigin origin, String cacheName) -> (WebCore::DOMCacheEngine::CacheIdentifierOrError result)
+    [EnabledBy=CacheAPIEnabled] CacheStorageRemoveCache(WebCore::DOMCacheIdentifier cacheIdentifier) -> (WebCore::DOMCacheEngine::RemoveCacheIdentifierOrError result)
+    [EnabledBy=CacheAPIEnabled] CacheStorageAllCaches(struct WebCore::ClientOrigin origin, uint64_t updateCounter) -> (WebCore::DOMCacheEngine::CacheInfosOrError result)
+    [EnabledBy=CacheAPIEnabled] CacheStorageReference(WebCore::DOMCacheIdentifier cacheIdentifier)
+    [EnabledBy=CacheAPIEnabled] CacheStorageDereference(WebCore::DOMCacheIdentifier cacheIdentifier)
+    [EnabledBy=CacheAPIEnabled] LockCacheStorage(struct WebCore::ClientOrigin origin)
+    [EnabledBy=CacheAPIEnabled] UnlockCacheStorage(struct WebCore::ClientOrigin origin)
+    [EnabledBy=CacheAPIEnabled] CacheStorageRetrieveRecords(WebCore::DOMCacheIdentifier cacheIdentifier, struct WebCore::RetrieveRecordsOptions options) -> (WebCore::DOMCacheEngine::CrossThreadRecordsOrError result)
+    [EnabledBy=CacheAPIEnabled] CacheStorageRemoveRecords(WebCore::DOMCacheIdentifier cacheIdentifier, WebCore::ResourceRequest request, struct WebCore::CacheQueryOptions options) -> (WebCore::DOMCacheEngine::RecordIdentifiersOrError result)
+    [EnabledBy=CacheAPIEnabled] CacheStoragePutRecords(WebCore::DOMCacheIdentifier cacheIdentifier, Vector<WebCore::DOMCacheEngine::CrossThreadRecord> records) -> (WebCore::DOMCacheEngine::RecordIdentifiersOrError result)
+    [EnabledBy=CacheAPIEnabled] CacheStorageClearMemoryRepresentation(struct WebCore::ClientOrigin origin) -> ()
+    [EnabledBy=CacheAPIEnabled] CacheStorageRepresentation() -> (String representation)
 
     ResetQuotaUpdatedBasedOnUsageForTesting(struct WebCore::ClientOrigin origin)
 }
