Annotate NetworkStorageManager endpoints with IndexedDBAPIEnabled https://bugs.webkit.org/show_bug.cgi?id=288758 rdar://145787399
Reviewed by Ryosuke Niwa.

Annotate some of the NetworkStorageManager endpoints with IndexedDBAPIEnabled

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.messages.in:

Canonical link: https://commits.webkit.org/291429@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -3718,6 +3718,7 @@ IndexedDBAPIEnabled:
     WebCore:
       default: true
   disableInLockdownMode: true
+  sharedPreferenceForWebProcess: true
 
 InlineMediaPlaybackRequiresPlaysInlineAttribute:
   type: bool
