[css-anchor-position-1] Implement parsing `position-visibility` rdar://141799808 https://bugs.webkit.org/show_bug.cgi?id=285005
Reviewed by Antti Koivisto.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/parsing/position-visibility-computed-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/parsing/position-visibility-computed.html: Renamed from LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/parsing/position-visibility-computed.tentative.html.
    - Rewrite tests to match current definition in the spec, and mark it as official test.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/parsing/position-visibility-computed.tentative-expected.txt: Removed.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/parsing/position-visibility-parsing-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/parsing/position-visibility-parsing.html: Renamed from LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/parsing/position-visibility-parsing.tentative.html.
    - Rewrite tests to match current definition in the spec and mark it as official test.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/parsing/position-visibility-parsing.tentative-expected.txt: Removed.
* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/property-list.js:
* LayoutTests/plat

--- a/Source/WebCore/css/CSSValueKeywords.in
+++ b/Source/WebCore/css/CSSValueKeywords.in
@@ -1895,6 +1895,11 @@ self-inline-start
 self-inline-end
 span-self-inline-start
 span-self-inline-end
+// position-visibility
+// always
+anchors-valid
+anchors-visible
+no-overflow
 
 // view-transition-name
 match-element
